feat!: Use UWSM as a session manager
Use UWSM for environment management and convert Hyde to utilise uwsm's slices, etc.

--- a/Configs/.local/share/hyde/hyde.conf
+++ b/Configs/.local/share/hyde/hyde.conf
@@ -38,19 +38,19 @@ $IDLE=hypridle       # default idle manager, you can use any idle manager you wa
 # This is used to override the default startup commands
 # $start.VAR = command
 
-$start.XDG_PORTAL_RESET=$scrPath/resetxdgportal.sh
+$start.XDG_PORTAL_RESET=$HYDE_LIB_DIR/resetxdgportal.sh
 $start.DBUS_SHARE_PICKER=dbus-update-activation-environment --systemd --all                                              # for XDPH
 $start.SYSTEMD_SHARE_PICKER=systemctl --user import-environment QT_QPA_PLATFORMTHEME WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 $start.BAR=waybar
 $start.NOTIFICATIONS=swaync # dunst
 $start.APPTRAY_BLUETOOTH=blueman-applet
-$start.WALLPAPER=$scrPath/swwwallpaper.sh
+$start.WALLPAPER=$HYDE_LIB_DIR/swwwallpaper.sh
 $start.TEXT_CLIPBOARD=wl-paste --type text --watch cliphist store
 $start.IMAGE_CLIPBOARD=wl-paste --type image --watch cliphist store
-$start.BATTERY_NOTIFY=$scrPath/batterynotify.sh
+$start.BATTERY_NOTIFY=$HYDE_LIB_DIR/batterynotify.sh
 $start.NETWORK_MANAGER=nm-applet --indicator
 $start.REMOVABLE_MEDIA=udiskie --no-automount --smart-tray
-$start.AUTH_DIALOGUE=$scrPath/polkitkdeauth.sh
+$start.AUTH_DIALOGUE=$HYDE_LIB_DIR/polkitkdeauth.sh
 $start.IDLE_DAEMON=$IDLE
 
 # // █▀▀ █▄░█ █░█
