--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -13,7 +13,7 @@
 # // ██████╔╝╚█████╔╝  ██║░╚███║╚█████╔╝░░░██║░░░  ███████╗██████╔╝██║░░░██║░░░
 # // ╚═════╝░░╚════╝░  ╚═╝░░╚══╝░╚════╝░░░░╚═╝░░░  ╚══════╝╚═════╝░╚═╝░░░╚═╝░░░
 
-$scrPath=$HOME/.local/lib/hyde # set scripts path
+# $HYDE_LIB_DIR=$HOME/.local/lib/hyde # set scripts path
 
 # Main modifier
 $mainMod = SUPER # windows key
@@ -41,65 +41,23 @@ $IDLE= $default.IDLE
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-$start.XDG_PORTAL_RESET=$scrPath/resetxdgportal.sh
-$start.DBUS_SHARE_PICKER=dbus-update-activation-environment --systemd --all # for XDPH
-$start.SYSTEMD_SHARE_PICKER=systemctl --user import-environment QT_QPA_PLATFORMTHEME WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
-$start.BAR=$scrPath/waybar.py --watch 
+$start.XDG_PORTAL_RESET=$HYDE_LIB_DIR/resetxdgportal.sh
+$start.BAR=$HYDE_LIB_DIR/waybar.py --watch 
 $start.NOTIFICATIONS=dunst
 $start.APPTRAY_BLUETOOTH=blueman-applet
-$start.WALLPAPER=$scrPath/wallpaper.sh --global
+$start.WALLPAPER=$HYDE_LIB_DIR/wallpaper.sh --global
 $start.TEXT_CLIPBOARD=wl-paste --type text --watch cliphist store
 $start.IMAGE_CLIPBOARD=wl-paste --type image --watch cliphist store
 $start.CLIPBOARD_PERSIST=wl-clip-persist --clipboard regular
-$start.BATTERY_NOTIFY=$scrPath/batterynotify.sh
+$start.BATTERY_NOTIFY=$HYDE_LIB_DIR/batterynotify.sh
 $start.NETWORK_MANAGER=nm-applet --indicator
 $start.REMOVABLE_MEDIA=udiskie --no-automount --smart-tray
-$start.AUTH_DIALOGUE=$scrPath/polkitkdeauth.sh
+$start.AUTH_DIALOGUE=$HYDE_LIB_DIR/polkitkdeauth.sh
 $start.IDLE_DAEMON=$IDLE
 
 # // █▀▀ █▄░█ █░█
 # // ██▄ █░▀█ ▀▄▀
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-# Toolkit Backend Variables - https://wiki.hyprland.org/Configuring/Environment-variables/#toolkit-backend-variables
-$env.GDK_BACKEND = wayland,x11,* # GTK: Use wayland if available. If not: try x11, then any other GDK backend.
-# $env.QT_QPA_PLATFORM = wayland;xcb # Qt: Use wayland if available, fall back to x11 if not.
-$env.SDL_VIDEODRIVER = wayland # Run SDL2 applications on Wayland. Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
-$env.CLUTTER_BACKEND = wayland # Clutter package already has wayland enabled, this variable will force Clutter applications to try and use the Wayland backend
-
-# XDG Specifications - https://wiki.hyprland.org/Configuring/Environment-variables/#xdg-specifications
-$env.XDG_CURRENT_DESKTOP = Hyprland
-$env.XDG_SESSION_TYPE = wayland
-$env.XDG_SESSION_DESKTOP = Hyprland
-
-# Qt Variables  - https://wiki.hyprland.org/Configuring/Environment-variables/#qt-variables
-
-$env.QT_AUTO_SCREEN_SCALE_FACTOR = 1 # (From the Qt documentation) enables automatic scaling, based on the monitor’s pixel density
-$env.QT_QPA_PLATFORM = wayland;xcb # Tell Qt applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
-$env.QT_WAYLAND_DISABLE_WINDOWDECORATION = 1 # Disables window decorations on Qt applications
-$env.QT_QPA_PLATFORMTHEME = qt6ct # Tells Qt based applications to pick your theme from qt5ct, use with Kvantum.
-
-
-# HyDE Environment Variables -
-
-$env.PATH =
-$env.MOZ_ENABLE_WAYLAND=1 # Enable Wayland for Firefox
-$env.GDK_SCALE=1 # Set GDK scale to 1 // For Xwayland on HiDPI
-$env.ELECTRON_OZONE_PLATFORM_HINT=auto # Set Electron Ozone Platform Hint to auto // For Electron apps on Wayland
-
-#  XDG-DIRS
-# $XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR:-/run/user/$(id -u)}
-# $XDG_CONFIG_HOME=${XDG_CONFIG_HOME:-$HOME/.config}
-# >> $env.XDG_CACHE_HOME=${XDG_CACHE_HOME:-$HOME/.cache}
-# $XDG_DATA_HOME=${XDG_DATA_HOME:-$HOME/.local/share}
-
-$env.XDG_RUNTIME_DIR=$XDG_RUNTIME_DIR
-$env.XDG_CONFIG_HOME=$HOME/.config
-$env.XDG_CACHE_HOME=$HOME/.cache
-$env.XDG_DATA_HOME=$HOME/.local/share
-$env.XDG_STATE_HOME=$HOME/.local/state
-
+# All environment is managed by UWSM
 
 
 # // █▀▀ ▀█▀ █▄▀
@@ -256,8 +214,8 @@ general {
 $SCREEN_SHADER_COMPILED=$env.XDG_CONFIG_HOME/hypr/shaders/.compiled.cache.glsl
 
 # hyprlang noerror true
-# source = $env.XDG_STATE_HOME/hyde/hyprgui.conf # GUI specific config. Used  to not break the low level configs. this will be available downstream
-source = $env.XDG_CONFIG_HOME/hypr/themes/colors.conf # Hyde wallbash colors
+# source = $XDG_STATE_HOME/hyde/hyprgui.conf # GUI specific config. Used  to not break the low level configs. this will be available downstream
+source = $XDG_CONFIG_HOME/hypr/themes/colors.conf # Hyde wallbash colors
 
 # Source groupbar in here
 group:groupbar {
@@ -267,15 +225,15 @@ group:groupbar {
     col.locked_inactive = rgba($wallbash_pry4ee)
 }
 
-source = $env.XDG_CONFIG_HOME/hypr/themes/theme.conf # theme specific settings
-source = $env.XDG_CONFIG_HOME/hypr/themes/wallbash.conf # Theme specific settings after Sanitize and handle fallbacks
-source = $env.XDG_CONFIG_HOME/hypr/nvidia.conf # Nvidia specific settings
-source = $env.XDG_CONFIG_HOME/hypr/animations.conf # source animations variables
-source = $env.XDG_CONFIG_HOME/hypr/shaders.conf # source shader variables
+source = $XDG_CONFIG_HOME/hypr/themes/theme.conf # theme specific settings
+source = $XDG_CONFIG_HOME/hypr/themes/wallbash.conf # Theme specific settings after Sanitize and handle fallbacks
+source = $XDG_CONFIG_HOME/hypr/nvidia.conf # Nvidia specific settings
+source = $XDG_CONFIG_HOME/hypr/animations.conf # source animations variables
+source = $XDG_CONFIG_HOME/hypr/shaders.conf # source shader variables
 # hyprlang noerror false
-source = $env.XDG_CONFIG_HOME/hypr/hyde.conf
+source = $XDG_CONFIG_HOME/hypr/hyde.conf
 # hyprlang noerror true
-source = $env.XDG_STATE_HOME/hyde/hyprland.conf # translated from config.toml // should override everything!
+source = $XDG_STATE_HOME/hyde/hyprland.conf # translated from config.toml // should override everything!
 decoration:screen_shader = $SCREEN_SHADER_COMPILED #! This is the compiled shader file, it will be created by the shaders.sh script
 # hyprlang noerror false
 #! Below this is an immutable part of the configuration file, and should not be modified by the user.
@@ -310,60 +268,16 @@ misc {
 
 # // █▀▀ █▄░█ █░█
 # // ██▄ █░▀█ ▀▄▀
-
-# # See https://wiki.hyprland.org/Configuring/Environment-variables/
-#! Remove for now 
-# env = GDK_BACKEND,$env.GDK_BACKEND
-# env = SDL_VIDEODRIVER,$env.SDL_VIDEODRIVER
-# env = CLUTTER_BACKEND,$env.CLUTTER_BACKEND
-
-# Qt Variables
-env = QT_AUTO_SCREEN_SCALE_FACTOR,$env.QT_AUTO_SCREEN_SCALE_FACTOR
-env = QT_QPA_PLATFORM,$env.QT_QPA_PLATFORM
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,$env.QT_WAYLAND_DISABLE_WINDOWDECORATION
-env = QT_QPA_PLATFORMTHEME,$env.QT_QPA_PLATFORMTHEME
-
-# Wayland-ENV
-env = MOZ_ENABLE_WAYLAND,$env.MOZ_ENABLE_WAYLAND
-env = GDK_SCALE,$env.GDK_SCALE
-env = ELECTRON_OZONE_PLATFORM_HINT,$env.ELECTRON_OZONE_PLATFORM_HINT
-
-# XDG Spec
-env = XDG_CURRENT_DESKTOP,$env.XDG_CURRENT_DESKTOP
-env = XDG_SESSION_TYPE,$env.XDG_SESSION_TYPE
-env = XDG_SESSION_DESKTOP,$env.XDG_SESSION_DESKTOP
-
-
-# HyDE Variables
-$hyde.PATH=$HOME/.local/bin:$scrPath:$env.PATH:$PATH
-env = PATH,$hyde.PATH
-
-# XDG-ENV
-env = XDG_CONFIG_HOME,$env.XDG_CONFIG_HOME
-env = XDG_CACHE_HOME,$env.XDG_CACHE_HOME
-env = XDG_DATA_HOME,$env.XDG_DATA_HOME
-
-# HyDE-ENV
-env = HYDE_RUNTIME_DIR,$env.XDG_RUNTIME_DIR/hyde
-env = HYDE_CONFIG_HOME,$env.XDG_CONFIG_HOME/hyde
-env = HYDE_CACHE_HOME,$env.XDG_CACHE_HOME/hyde
-env = HYDE_DATA_HOME,$env.XDG_DATA_HOME/hyde
-env = HYDE_STATE_HOME,$env.XDG_STATE_HOME/hyde
-
-# CURSOR ENV
-# env = HYPRCURSOR_THEME,$CURSOR_THEME
-# env = HYPRCURSOR_SIZE,$CURSOR_SIZE
-# env = XCURSOR_THEME,$CURSOR_THEME
-# env = XCURSOR_SIZE,$CURSOR_SIZE
+# All environment is managed by UWSM
 
 # Execute on reload
 
 # HyDE Preparation
-$exec.mkdir = mkdir -p $env.XDG_RUNTIME_DIR/hyde $env.XDG_CACHE_HOME/hyde/wallbash $env.XDG_CONFIG_HOME/hyde $env.XDG_DATA_HOME/hyde $env.XDG_STATE_HOME/hyde # Create HyDE directories
-$set.env = printf "\n_SHELL='$SHELL'\n_GDK_BACKEND='$env.GDK_BACKEND'\n_QT_QPA_PLATFORM='$env.QT_QPA_PLATFORM'\n_SDL_VIDEODRIVER='$env.SDL_VIDEODRIVER'\n_CLUTTER_BACKEND='$env.CLUTTER_BACKEND'\n_XDG_CURRENT_DESKTOP='$env.XDG_CURRENT_DESKTOP'\n_XDG_SESSION_TYPE='$env.XDG_SESSION_TYPE'\n_XDG_SESSION_DESKTOP='$env.XDG_SESSION_DESKTOP'\n_QT_AUTO_SCREEN_SCALE_FACTOR='$env.QT_AUTO_SCREEN_SCALE_FACTOR'\n_QT_WAYLAND_DISABLE_WINDOWDECORATION='$env.QT_WAYLAND_DISABLE_WINDOWDECORATION'\n_QT_QPA_PLATFORMTHEME='$env.QT_QPA_PLATFORMTHEME'\n_HYDE_PATH='$hyde.PATH'\n_MOZ_ENABLE_WAYLAND='$env.MOZ_ENABLE_WAYLAND'\n_GDK_SCALE='$env.GDK_SCALE'\n_ELECTRON_OZONE_PLATFORM_HINT='$env.ELECTRON_OZONE_PLATFORM_HINT'\n_XDG_RUNTIME_DIR='$env.XDG_RUNTIME_DIR'\n_XDG_CONFIG_HOME='$env.XDG_CONFIG_HOME'\n_XDG_CACHE_HOME='$env.XDG_CACHE_HOME'\n_XDG_DATA_HOME='$env.XDG_DATA_HOME'\n_GTK_THEME='$GTK_THEME'\n_ICON_THEME='$ICON_THEME'\n_COLOR_SCHEME='$COLOR_SCHEME'\n_CURSOR_SIZE='$CURSOR_SIZE'\n_CURSOR_THEME='$CURSOR_THEME'\n_FONT='$FONT'\n_FONT_SIZE='$FONT_SIZE'\n_DOCUMENT_FONT='$DOCUMENT_FONT'\n_DOCUMENT_FONT_SIZE='$DOCUMENT_FONT_SIZE'\n_MONOSPACE_FONT='$MONOSPACE_FONT'\n_MONOSPACE_FONT_SIZE='$MONOSPACE_FONT_SIZE'\n_FONT_ANTIALIASING='$FONT_ANTIALIASING'\n_FONT_HINTING='$FONT_HINTING'\n_HYDE_RUNTIME_DIR='$env.XDG_RUNTIME_DIR/hyde'\n_HYDE_CONFIG_HOME='$env.XDG_CONFIG_HOME/hyde'\n_HYDE_CACHE_HOME='$env.XDG_CACHE_HOME/hyde'\n_HYDE_DATA_HOME='$env.XDG_DATA_HOME/hyde'\n_HYDE_STATE_HOME='$env.XDG_STATE_HOME/hyde'\nexport _TERMINAL='$(which $TERMINAL)'\nexport _LOCKSCREEN='$LOCKSCREEN'" > "$env.XDG_RUNTIME_DIR/hyde/environment"
+$exec.mkdir = mkdir -p $XDG_RUNTIME_DIR/hyde $XDG_CACHE_HOME/hyde/wallbash $XDG_CONFIG_HOME/hyde $XDG_DATA_HOME/hyde $XDG_STATE_HOME/hyde # Create HyDE directories
+$set.env = printf "\n_SHELL='$SHELL'\n_GDK_BACKEND='$GDK_BACKEND'\n_QT_QPA_PLATFORM='$QT_QPA_PLATFORM'\n_SDL_VIDEODRIVER='$SDL_VIDEODRIVER'\n_CLUTTER_BACKEND='$CLUTTER_BACKEND'\n_XDG_CURRENT_DESKTOP='$XDG_CURRENT_DESKTOP'\n_XDG_SESSION_TYPE='$XDG_SESSION_TYPE'\n_XDG_SESSION_DESKTOP='$XDG_SESSION_DESKTOP'\n_QT_AUTO_SCREEN_SCALE_FACTOR='$QT_AUTO_SCREEN_SCALE_FACTOR'\n_QT_WAYLAND_DISABLE_WINDOWDECORATION='$QT_WAYLAND_DISABLE_WINDOWDECORATION'\n_QT_QPA_PLATFORMTHEME='$QT_QPA_PLATFORMTHEME'\n_HYDE_PATH='$hyde.PATH'\n_MOZ_ENABLE_WAYLAND='$MOZ_ENABLE_WAYLAND'\n_GDK_SCALE='$GDK_SCALE'\n_ELECTRON_OZONE_PLATFORM_HINT='$ELECTRON_OZONE_PLATFORM_HINT'\n_XDG_RUNTIME_DIR='$XDG_RUNTIME_DIR'\n_XDG_CONFIG_HOME='$XDG_CONFIG_HOME'\n_XDG_CACHE_HOME='$XDG_CACHE_HOME'\n_XDG_DATA_HOME='$XDG_DATA_HOME'\n_GTK_THEME='$GTK_THEME'\n_ICON_THEME='$ICON_THEME'\n_COLOR_SCHEME='$COLOR_SCHEME'\n_CURSOR_SIZE='$CURSOR_SIZE'\n_CURSOR_THEME='$CURSOR_THEME'\n_FONT='$FONT'\n_FONT_SIZE='$FONT_SIZE'\n_DOCUMENT_FONT='$DOCUMENT_FONT'\n_DOCUMENT_FONT_SIZE='$DOCUMENT_FONT_SIZE'\n_MONOSPACE_FONT='$MONOSPACE_FONT'\n_MONOSPACE_FONT_SIZE='$MONOSPACE_FONT_SIZE'\n_FONT_ANTIALIASING='$FONT_ANTIALIASING'\n_FONT_HINTING='$FONT_HINTING'\n_HYDE_RUNTIME_DIR='$XDG_RUNTIME_DIR/hyde'\n_HYDE_CONFIG_HOME='$XDG_CONFIG_HOME/hyde'\n_HYDE_CACHE_HOME='$XDG_CACHE_HOME/hyde'\n_HYDE_DATA_HOME='$XDG_DATA_HOME/hyde'\n_HYDE_STATE_HOME='$XDG_STATE_HOME/hyde'\nexport _TERMINAL='$(which $TERMINAL)'\nexport _LOCKSCREEN='$LOCKSCREEN'" > "$XDG_RUNTIME_DIR/hyde/environment"
 
 # Create a dconf file that will be loaded later one time, better than multiple dconf commands and better than gsettings
-$dconFile=$env.XDG_CACHE_HOME/hyde/dconf
+$dconFile=$XDG_CACHE_HOME/hyde/dconf
 $dConf = \n[org/gnome/desktop/interface]\n
 $dConf = $dConf icon-theme='$ICON_THEME'\n
 $dConf = $dConf gtk-theme='$GTK_THEME'\n
@@ -386,7 +300,7 @@ $set.hyprCursor = hyprctl setcursor $CURSOR_THEME $CURSOR_SIZE
 # $exec.dConf = ( $dconf.populate && $dconf.load && $dconf.update && $set.hyprCursor ) 
 $exec.dConf = ( $dconf.preserve && $dconf.populate && $dconf.reset && $dconf.load && $set.hyprCursor ) 
 
-$exec.keybinds_hint =  $scrPath/keybinds.hint.py --format rofi > $env.XDG_RUNTIME_DIR/hyde/keybinds_hint.rofi
+$exec.keybinds_hint =  $HYDE_LIB_DIR/keybinds.hint.py --format rofi > $XDG_RUNTIME_DIR/hyde/keybinds_hint.rofi
 
 # Execute
 exec = $exec.dConf
@@ -396,8 +310,6 @@ exec = $exec.mkdir & $set.env & $exec.animation & $exec.keybinds_hint
 # // █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 exec-once = uwsm app -- $start.XDG_PORTAL_RESET || $start.XDG_PORTAL_RESET # resetxdgportal.sh (one-time setup)
-exec-once = uwsm app -- $start.DBUS_SHARE_PICKER || $start.DBUS_SHARE_PICKER # dbus-update-activation-environment (one-time setup)
-exec-once = uwsm app -- $start.SYSTEMD_SHARE_PICKER || $start.SYSTEMD_SHARE_PICKER # systemctl --user import-environment (one-time setup)
 exec-once = uwsm app -t service -s s -- $start.BAR || $start.BAR # waybar.py --watch (daemon)
 exec-once = uwsm app -t service -s s -- $start.NOTIFICATIONS || $start.NOTIFICATIONS # dunst (daemon)
 exec-once = uwsm app -t service -s a -- $start.APPTRAY_BLUETOOTH || $start.APPTRAY_BLUETOOTH # blueman-applet (system tray)
@@ -412,7 +324,7 @@ exec-once = uwsm app -t service -s s -- $start.AUTH_DIALOGUE || $start.AUTH_DIAL
 exec-once = uwsm app -t service -s s -- $start.IDLE_DAEMON || $start.IDLE_DAEMON # hypridle (daemon)
 
 # hyde/config.toml is parsed and exported to the environment
-# exec-once = $scrPath/parse.config.py --daemon --input $env.XDG_CONFIG_HOME/hyde/config.toml --env $env.XDG_STATE_HOME/hyde/config --hypr $env.XDG_STATE_HOME/hyde/hyprland.conf
+# exec-once = $HYDE_LIB_DIR/parse.config.py --daemon --input $XDG_CONFIG_HOME/hyde/config.toml --env $XDG_STATE_HOME/hyde/config --hypr $XDG_STATE_HOME/hyde/hyprland.conf
 exec-once = systemctl --user start hyde-config.service #! If this is not working try the command above!
 
 
