--- a/Configs/.config/hypr/hyde.conf
+++ b/Configs/.config/hypr/hyde.conf
@@ -17,7 +17,7 @@
 # Commenting out the variable will use the default value
 # For updated configuration options, see https://github.com/HyDE-Project/HyDE/blob/master/Configs/.config/hypr/hyde.conf
 # For simplicity, ./hyde.conf ONLY accepts $ for variables and # for comments, will sanitize the file to remove any other characters
-# $start.VAR , $env.VAR are ONLY HyDE specific conventions for consistency.
+# $start.VAR are ONLY HyDE specific conventions for consistency.
 
 # Keyboard modifier
 # $mainMod = SUPER # windows key
@@ -40,59 +40,25 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 # Override the default startup commands
 
-# $start.XDG_PORTAL_RESET=$scrPath/resetxdgportal.sh
+# $start.XDG_PORTAL_RESET=$HYDE_LIB_DIR/resetxdgportal.sh
 # $start.DBUS_SHARE_PICKER=dbus-update-activation-environment --systemd --all                                              # for XDPH
 # $start.SYSTEMD_SHARE_PICKER=systemctl --user import-environment QT_QPA_PLATFORMTHEME WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 # $start.BAR=waybar
 # $start.NOTIFICATIONS=swaync # dunst
 # $start.APPTRAY_BLUETOOTH=blueman-applet
-# $start.WALLPAPER=$scrPath/swwwallpaper.sh
+# $start.WALLPAPER=$HYDE_LIB_DIR/swwwallpaper.sh
 # $start.TEXT_CLIPBOARD=wl-paste --type text --watch cliphist store
 # $start.IMAGE_CLIPBOARD=wl-paste --type image --watch cliphist store
-# $start.BATTERY_NOTIFY=$scrPath/batterynotify.sh
+# $start.BATTERY_NOTIFY=$HYDE_LIB_DIR/batterynotify.sh
 # $start.NETWORK_MANAGER=nm-applet --indicator
 # $start.REMOVABLE_MEDIA=udiskie --no-automount --smart-tray
-# $start.AUTH_DIALOGUE=$scrPath/polkitkdeauth.sh
+# $start.AUTH_DIALOGUE=$HYDE_LIB_DIR/polkitkdeauth.sh
 # $start.IDLE_DAEMON=$IDLE
 
 # // █▀▀ █▄░█ █░█
 # // ██▄ █░▀█ ▀▄▀
 
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-# Override the default environment variables
-
-
-# # Toolkit Backend Variables - https://wiki.hyprland.org/Configuring/Environment-variables/#toolkit-backend-variables
-# $env.GDK_BACKEND = wayland,x11,* #s GTK: Use wayland if available. If not: try x11, then any other GDK backend.
-# # $env.QT_QPA_PLATFORM = wayland;xcb #Qt: Use wayland if available, fall back to x11 if not.
-# $env.SDL_VIDEODRIVER = wayland #s Run SDL2 applications on Wayland. Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
-# $env.CLUTTER_BACKEND = wayland #s Clutter package already has wayland enabled, this variable will force Clutter applications to try and use the Wayland backend
-
-# # XDG Specifications - https://wiki.hyprland.org/Configuring/Environment-variables/#xdg-specifications
-# $env.XDG_CURRENT_DESKTOP = Hyprland
-# $env.XDG_SESSION_TYPE = wayland
-# $env.XDG_SESSION_DESKTOP = Hyprland
-
-# # Qt Variables  - https://wiki.hyprland.org/Configuring/Environment-variables/#qt-variables
-
-# $env.QT_AUTO_SCREEN_SCALE_FACTOR = 1 # (From the Qt documentation) enables automatic scaling, based on the monitor’s pixel density
-# $env.QT_QPA_PLATFORM=wayland;xcb # Tell Qt applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
-# $env.QT_WAYLAND_DISABLE_WINDOWDECORATION = 1 # Disables window decorations on Qt applications
-# $env.QT_QPA_PLATFORMTHEME = qt6ct            # Tells Qt based applications to pick your theme from qt5ct, use with Kvantum.
-
-# # HyDE Environment Variables -
-
-# $env.PATH =
-# $env.MOZ_ENABLE_WAYLAND=1              # Enable Wayland for Firefox
-# $env.GDK_SCALE=1                       # Set GDK scale to 1 // For Xwayland on HiDPI
-# $env.ELECTRON_OZONE_PLATFORM_HINT=auto # Set Electron Ozone Platform Hint to auto // For Electron apps on Wayland
-
-# #  XDG-DIRS
-
-# $env.XDG_RUNTIME_DIR=$XDG_RUNTIME_DIR
-# $env.XDG_CONFIG_HOME=$HOME/.config
-# $env.XDG_CACHE_HOME=$HOME/.cache
-# $env.XDG_DATA_HOME=$HOME/.local/share
+# All environment management is handled by UWSM. See $XDG_CONFIG_HOME/uwsm/env
 
 
 
