--- a/Configs/.local/share/hyde/keybindings.conf
+++ b/Configs/.local/share/hyde/keybindings.conf
@@ -16,38 +16,38 @@ $mainMod = Super # super / meta / windows key
 
 
 # Window/Session actions
-bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
-bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
+bind = $mainMod, Q, exec, $HYDE_LIB_DIR/dontkillsteam.sh # close focused window
+bind = Alt, F4, exec, $HYDE_LIB_DIR/dontkillsteam.sh # close focused window
 bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, W, togglefloating, # toggle the window between focus and float
 bind = $mainMod, G, togglegroup, # toggle the window between focus and group
 bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
 bind = $mainMod, L, exec, swaylock # launch lock screen
-bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
-bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
-bind = Alt_R, Control_R , exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
+bind = $mainMod+Shift, F, exec, $HYDE_LIB_DIR/windowpin.sh # toggle pin on focused window
+bind = $mainMod, Backspace, exec, $HYDE_LIB_DIR/logoutlaunch.sh # launch logout menu
+bind = Alt_R, Control_R , exec, killall waybar || (env reload_flag=1 $HYDE_LIB_DIR/wbarconfgen.sh) # toggle waybar and reload config
 #bind = Alt_R, Control_R, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
 
 # Application shortcuts
-bind = $mainMod, T, exec, $TERMINAL # launch terminal emulator
-bind = $mainMod, E, exec, $EXPLORER # launch file manager
-bind = $mainMod, C, exec, $EDITOR # launch text editor
-bind = $mainMod, F, exec, $BROWSER # launch web browser
-bind = Ctrl+Shift, Escape, exec, $scrPath/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
+bind = $mainMod, T, exec, uwsm app -- $TERMINAL # launch terminal emulator
+bind = $mainMod, E, exec, uwsm app -- $EXPLORER # launch file manager
+bind = $mainMod, C, exec, uwsm app -- $EDITOR # launch text editor
+bind = $mainMod, F, exec, uwsm app -- $BROWSER # launch web browser
+bind = Ctrl+Shift, Escape, exec, uwsm app -- $HYDE_LIB_DIR/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
 
 # Rofi menus
-bind = alt, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
-bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch window switcher
-bind = $mainMod+Shift, E, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # launch file explorer
+bind = alt, space, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/rofilaunch.sh d # launch application launcher
+bind = $mainMod, Tab, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/rofilaunch.sh w # launch window switcher
+bind = $mainMod+Shift, E, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/rofilaunch.sh f # launch file explorer
 
 # Audio control
-bindl  = , F10, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-bindel = , F11, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-bindel = , F12, exec, $scrPath/volumecontrol.sh -o i # increase volume
-bindl  = , XF86AudioMute, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-bindl  = , XF86AudioMicMute, exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
-bindel = , XF86AudioLowerVolume, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-bindel = , XF86AudioRaiseVolume, exec, $scrPath/volumecontrol.sh -o i # increase volume
+bindl  = , F10, exec, $HYDE_LIB_DIR/volumecontrol.sh -o m # toggle audio mute
+bindel = , F11, exec, $HYDE_LIB_DIR/volumecontrol.sh -o d # decrease volume
+bindel = , F12, exec, $HYDE_LIB_DIR/volumecontrol.sh -o i # increase volume
+bindl  = , XF86AudioMute, exec, $HYDE_LIB_DIR/volumecontrol.sh -o m # toggle audio mute
+bindl  = , XF86AudioMicMute, exec, $HYDE_LIB_DIR/volumecontrol.sh -i m # toggle microphone mute
+bindel = , XF86AudioLowerVolume, exec, $HYDE_LIB_DIR/volumecontrol.sh -o d # decrease volume
+bindel = , XF86AudioRaiseVolume, exec, $HYDE_LIB_DIR/volumecontrol.sh -o i # increase volume
 
 # Media control
 bindl  = , XF86AudioPlay, exec, playerctl play-pause # toggle between media play and pause
@@ -56,37 +56,37 @@ bindl  = , XF86AudioNext, exec, playerctl next # media next
 bindl  = , XF86AudioPrev, exec, playerctl previous # media previous
 
 # Brightness control
-bindel = , XF86MonBrightnessUp, exec, $scrPath/brightnesscontrol.sh i # increase brightness
-bindel = , XF86MonBrightnessDown, exec, $scrPath/brightnesscontrol.sh d # decrease brightness
+bindel = , XF86MonBrightnessUp, exec, $HYDE_LIB_DIR/brightnesscontrol.sh i # increase brightness
+bindel = , XF86MonBrightnessDown, exec, $HYDE_LIB_DIR/brightnesscontrol.sh d # decrease brightness
 
 # Move between grouped windows
 bind = $mainMod CTRL , H, changegroupactive, b
 bind = $mainMod CTRL , L, changegroupactive, f
 
 # Screenshot/Screencapture/Color picker
-bindd = $mainMod+Shift, P,Color Picker , exec, hyprpicker -a # Pick color (Hex) >> clipboard#
-bind = $mainMod, P, exec, $scrPath/screenshot.sh s # partial screenshot capture
-bind = $mainMod+Ctrl, P, exec, $scrPath/screenshot.sh sf # partial screenshot capture (frozen screen)
-bind = $mainMod+Alt, P, exec, $scrPath/screenshot.sh m # monitor screenshot capture
-bind = , Print, exec, $scrPath/screenshot.sh p # all monitors screenshot capture
+bindd = $mainMod+Shift, P,Color Picker , exec, uwsm app -- hyprpicker -a # Pick color (Hex) >> clipboard#
+bind = $mainMod, P, exec, uwsm app -- $HYDE_LIB_DIR/screenshot.sh s # partial screenshot capture
+bind = $mainMod+Ctrl, P, exec, uwsm app -- $HYDE_LIB_DIR/screenshot.sh sf # partial screenshot capture (frozen screen)
+bind = $mainMod+Alt, P, exec, uwsm app -- $HYDE_LIB_DIR/screenshot.sh m # monitor screenshot capture
+bind = , Print, exec, uwsm app -- $HYDE_LIB_DIR/screenshot.sh p # all monitors screenshot capture
 
 # Custom scripts
 # TODO Make a main rofi menu for these selectors
-bind = $mainMod+Alt, G, exec, $scrPath/gamemode.sh # disable hypr effects for gamemode
-bind = $mainMod+Alt, Right, exec, $scrPath/swwwallpaper.sh -n # next wallpaper
-bind = $mainMod+Alt, Left, exec, $scrPath/swwwallpaper.sh -p # previous wallpaper
-bind = $mainMod+Alt, Up, exec, $scrPath/wbarconfgen.sh n # next waybar mode
-bind = $mainMod+Alt, Down, exec, $scrPath/wbarconfgen.sh p # previous waybar mode
-bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
-bind = $mainMod+Shift, T, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
-bind = $mainMod+Shift, A, exec, pkill -x rofi || $scrPath/rofiselect.sh # launch select menu
-bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrPath/swwwallselect.sh # launch wallpaper select menu
-bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh -c # launch clipboard
-bind = $mainMod+Shift, V, exec, pkill -x rofi || $scrPath/cliphist.sh # launch clipboard Manager
-bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # switch keyboard layout
-bind = $mainMod, slash, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
-bind = $mainMod, comma,exec, pkill -x rofi || $scrPath/emoji-picker.sh # launch emoji picker
-bind = $mainMod, period, exec, pkill -x rofi || $scrPath/glyph-picker.sh # launch glyph picker
+bind = $mainMod+Alt, G, exec, $HYDE_LIB_DIR/gamemode.sh # disable hypr effects for gamemode
+bind = $mainMod+Alt, Right, exec, $HYDE_LIB_DIR/swwwallpaper.sh -n # next wallpaper
+bind = $mainMod+Alt, Left, exec, $HYDE_LIB_DIR/swwwallpaper.sh -p # previous wallpaper
+bind = $mainMod+Alt, Up, exec, $HYDE_LIB_DIR/wbarconfgen.sh n # next waybar mode
+bind = $mainMod+Alt, Down, exec, $HYDE_LIB_DIR/wbarconfgen.sh p # previous waybar mode
+bind = $mainMod+Shift, R, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/wallbashtoggle.sh -m # launch wallbash mode select menu
+bind = $mainMod+Shift, T, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/themeselect.sh # launch theme select menu
+bind = $mainMod+Shift, A, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/rofiselect.sh # launch select menu
+bind = $mainMod+Shift, W, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/swwwallselect.sh # launch wallpaper select menu
+bind = $mainMod, V, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/cliphist.sh -c # launch clipboard
+bind = $mainMod+Shift, V, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/cliphist.sh # launch clipboard Manager
+bind = $mainMod, K, exec, $HYDE_LIB_DIR/keyboardswitch.sh # switch keyboard layout
+bind = $mainMod, slash, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/keybinds_hint.sh c # launch keybinds hint
+bind = $mainMod, comma,exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/emoji-picker.sh # launch emoji picker
+bind = $mainMod, period, exec, pkill -x rofi || uwsm app -- $HYDE_LIB_DIR/glyph-picker.sh # launch glyph picker
 
 # Move/Change window focus
 bind = $mainMod, Left, movefocus, l
