feat!: Use UWSM as a session manager
Use UWSM for environment management and convert Hyde to utilise uwsm's slices, etc.

--- a/Configs/.local/share/hyde/config.toml
+++ b/Configs/.local/share/hyde/config.toml
@@ -214,7 +214,7 @@ notifications = "swaync"  # Notifications.
 removable_media = "udiskie --no-automount --smart-tray"  # Removable media manager.
 systemd_share_picker = "systemctl --user import-environment QT_QPA_PLATFORMTHEME WAYLAND_DISPLAY XDG_CURRENT_DESKTOP"  # Systemd share picker.
 text_clipboard = "wl-paste --type text --watch cliphist store"  # Text clipboard.
-wallpaper = "$scrPath/wallpaper.sh --global"  # Wallpaper script.
+wallpaper = "$HYDE_LIB_DIR/wallpaper.sh --global"  # Wallpaper script.
 xdg_portal_reset = "resetxdgportal.sh"  # XDG portal reset script.
 
 # mediaplayer.py configuration.
