--- a/Configs/.local/share/hyde/schema/config.toml
+++ b/Configs/.local/share/hyde/schema/config.toml
@@ -771,7 +771,7 @@ type      = "object"
     type        = "string"
 
 [properties.hyprland_start.properties.wallpaper]
-    default     = "$scrPath/wallpaper.sh --global"
+    default     = "$HYDE_LIB_DIR/wallpaper.sh --global"
     description = "Wallpaper script."
     type        = "string"
 
