--- a/Configs/.local/share/hyde/schema/config.toml.json
+++ b/Configs/.local/share/hyde/schema/config.toml.json
@@ -846,7 +846,7 @@
                     "type": "string"
                 },
                 "wallpaper": {
-                    "default": "$scrPath/wallpaper.sh --global",
+                    "default": "$HYDE_LIB_DIR/wallpaper.sh --global",
                     "description": "Wallpaper script.",
                     "type": "string"
                 },
